--- a/nginx.conf
+++ b/nginx.conf
@@ -50,11 +50,19 @@ http {
     text/css
     text/plain
     text/vnd.wap.wml
-    application/javascript
+    text/javascript
+    text/markdown
+    text/calendar
+    text/x-component
+    text/vcard
+    text/cache-manifest
+    text/vtt
     application/json
-    application/rss+xml
-    application/xml;
+    application/manifest+json;
 
+  # Default MIME type for responses
+  # Default: text/plain
+  default_type application/octet-stream;
 
   # How long to allow each connection to stay idle.
   # Longer values are better for each individual client, particularly for SSL,
