fix: move maps into their respective files and no longer define defaults

--- a/h5bp/cross-origin/requests.conf
+++ b/h5bp/cross-origin/requests.conf
@@ -16,4 +16,17 @@
 #
 #         add_header Access-Control-Allow-Origin "subdomain.example.com";
 
+map $sent_http_content_type $cors {
+  # Images
+  ~*image/ $server_cors;
+
+  # Web fonts
+  ~*font/                         $server_cors;
+  ~*application/vnd.ms-fontobject $server_cors;
+  ~*application/x-font-ttf        $server_cors;
+  ~*application/font-woff         $server_cors;
+  ~*application/x-font-woff       $server_cors;
+  ~*application/font-woff2        $server_cors;
+}
+
 add_header Access-Control-Allow-Origin $cors;
