--- a/h5bp/security/content-security-policy.conf
+++ b/h5bp/security/content-security-policy.conf
@@ -25,4 +25,8 @@
 # https://www.html5rocks.com/en/tutorials/security/content-security-policy/
 # https://www.w3.org/TR/CSP/
 
+map $sent_http_content_type $content_security_policy {
+  ~*text/html $server_content_security_policy;
+}
+
 add_header Content-Security-Policy $content_security_policy always;
