--- a/h5bp/security/referrer-policy.conf
+++ b/h5bp/security/referrer-policy.conf
@@ -16,4 +16,8 @@
 # https://scotthelme.co.uk/a-new-security-header-referrer-policy/
 # https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Referrer-Policy
 
+map $sent_http_content_type $referrer_policy {
+  ~*text/html $server_referrer_policy;
+}
+
 add_header Referrer-Policy $referrer_policy always;
