--- a/h5bp/security/x-frame-options.conf
+++ b/h5bp/security/x-frame-options.conf
@@ -33,4 +33,8 @@
 # https://blogs.msdn.microsoft.com/ieinternals/2010/03/30/combating-clickjacking-with-x-frame-options/
 # https://www.owasp.org/index.php/Clickjacking
 
+map $sent_http_content_type $x_frame_options {
+  ~*text/html $server_x_frame_options;
+}
+
 add_header X-Frame-Options $x_frame_options always;
