--- a/h5bp/security/x-xss-protection.conf
+++ b/h5bp/security/x-xss-protection.conf
@@ -36,4 +36,8 @@
 # https://blogs.msdn.microsoft.com/ieinternals/2011/01/31/controlling-the-xss-filter/
 # https://www.owasp.org/index.php/Cross-site_Scripting_%28XSS%29
 
+map $sent_http_content_type $x_xss_protection {
+  ~*text/html $server_x_xss_protection;
+}
+
 add_header X-XSS-Protection $x_xss_protection always;
